--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,18 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
+public/cache
+public/build
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
 public_html/hot
 
-storage/*.key
+storage/
 .env
 Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+composer.json
+tests
